--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@
  .hero_mob img{
     width: 100%;
     height: 300px;
+    margin-top: 50px;
     /* object-fit: fill; */
  }
 @media (max-width: 968px) {
@@ -172,7 +173,7 @@
 .hero{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url("./images/Mahadev-Book-ID.webp");
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("./images/ATOZBG.jpeg");
     background-position: center;
     background-size:cover;
     background-repeat: no-repeat;
@@ -805,7 +806,8 @@
     }
  
     .logo_footer {
-        max-width: 300px;
+        max-width: 200px;
+        
         margin-bottom: 1.5rem;
     }
  
