--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@
 .hero{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("./images/ATOZBG.jpeg");
+    background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url("./images/atoz_cricket.png");
     background-position: center;
     background-size:cover;
     background-repeat: no-repeat;
